microsoft-365-access-excel-one-drive-outlook-power-point-teams-word-visio-project-beta: reorganized the directory structure
Moved Microsoft 365 Beta-related install and uninstall scripts from the generic scripts directory to the more specific scripts subdirectory.

Signed-off-by: Banee Ishaque K <Baneeishaque@gmail.com>

--- a/bucket/microsoft-365-access-excel-one-drive-outlook-power-point-teams-word-visio-project-beta.json
+++ b/bucket/microsoft-365-access-excel-one-drive-outlook-power-point-teams-word-visio-project-beta.json
@@ -12,12 +12,12 @@
     "pre_install": [
         "$scriptdir = \"$bucketsdir\\$bucket\\scripts\"",
         "if ($architecture -eq '64bit') {",
-        "    (Get-Content \"$scriptdir\\install-$app.xml\").Replace('{buildNumber}', $version) | Set-Content -Path \"$dir\\install-$app.xml\"",
+        "    (Get-Content \"$scriptdir\\microsoft-365-beta\\install-$app.xml\").Replace('{buildNumber}', $version) | Set-Content -Path \"$dir\\install-$app.xml\"",
         "}",
         "elseif ($architecture -eq '32bit') {",
-        "    (Get-Content \"$scriptdir\\install-$app.xml\").Replace('{buildNumber}', $version).Replace('64', '32') | Set-Content -Path \"$dir\\install-$app.xml\"",
+        "    (Get-Content \"$scriptdir\\microsoft-365-beta\\install-$app.xml\").Replace('{buildNumber}', $version).Replace('64', '32') | Set-Content -Path \"$dir\\install-$app.xml\"",
         "}",
-        "Copy-Item \"$scriptdir\\uninstall-microsoft-365.xml\" \"$dir\\\""
+        "Copy-Item \"$scriptdir\\microsoft-365-beta\\uninstall-microsoft-365.xml\" \"$dir\\\""
     ],
     "installer": {
         "script": [
